# steam-desktop-authenticator-v2

./: .eslintrc.cjs  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  store.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/actions/: index.ts  steam.ts
src/components/: AccountsList.tsx  ConfirmationsManager.tsx  ImportAccountModal.tsx  NoticeModal.tsx  Options.tsx  SelectedAccount.tsx  SettingsModal.tsx  SetupSteamAccountModal.tsx  ThemeToggle.tsx  TotpManager.tsx
src/components/Dropdowns/: Options.tsx  SelectedAccount.tsx
src/components/Modals/: ImportAccountModal.tsx  NoticeModal.tsx  SettingsModal.tsx  SetupEncryptionModal.tsx  SetupSteamAccountModal.tsx
src/reducers/: importAccountModal.ts  index.ts  noticeModal.ts  settings.ts  settingsModal.ts  setupEncryptionModal.ts  setupSteamAccountModal.ts  steam.ts
src/steam/: Account.ts  AccountManager.ts
src/translations/: i18n.ts
src/utils/: dataStorage.util.ts  encryption.util.ts  notifications.util.ts  passwordStrength.util.ts
tests/: encryption-compatibility.test.ts  encryption.test.ts
