[package]
name = "steam-desktop-authenticator-v2"
version = "0.0.0"
description = "A Tauri App"
authors = ["Easton Schram"]
license = "MIT"
repository = "https://github.com/easton36/steam-desktop-authenticator-v2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "notification-all", "fs-remove-file", "fs-write-file", "fs-read-file", "fs-create-dir", "path-all", "fs-exists", "system-tray", "updater", "process-exit", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
rfd = "0.9.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
